@@ -1,4 +1,9 @@
 2010-11-01 Alexander Malysh <amalysh at kannel.org>
+    * doc/userguide/userguide.xml: added smsbox group configuration
+      variable sms-length to the userguide. 
+      Thanks to Luca Corti <luca at fantacast.it> for this patch.
+
+2010-11-01 Alexander Malysh <amalysh at kannel.org>
     * contrib/web/sendsms.php, gw/ota_prov.c, gwlib/fdset.c: fixed some
       spelling errors.
       Thanks to Luca Corti <luca at fantacast.it> for this patch.
